--- a/src/app/pages/form/layouts/layouts.html
+++ b/src/app/pages/form/layouts/layouts.html
@@ -1,6 +1,6 @@
 <div class="widgets">
 
-  <div class="row">
+ <!-- <div class="row">
     <div class="col-md-12"
          ba-panel
          ba-panel-title="Inline Form"
@@ -16,7 +16,7 @@
           ba-panel-title="Basic Form"
           ba-panel-class="with-scroll">
         <div ng-include="'app/pages/form/layouts/widgets/basicForm.html'"></div>
-      </div>
+      </div>-->
 
       <div
           ba-panel
@@ -24,8 +24,8 @@
           ba-panel-class="with-scroll">
         <div ng-include="'app/pages/form/layouts/widgets/horizontalForm.html'"></div>
       </div>
-    </div>
-    <div class="col-md-6">
+    <!--</div>-->
+    <!--<div class="col-md-6">
       <div
           ba-panel
           ba-panel-title="Form Without Labels"
@@ -40,5 +40,5 @@
       </div>
     </div>
   </div>
-
+-->
 </div>
