--- a/src/app/pages/tables/widgets/stripedRows.html
+++ b/src/app/pages/tables/widgets/stripedRows.html
@@ -3,11 +3,13 @@
     <thead>
     <tr>
       <th class="table-id">#</th>
-      <th>First Name</th>
-      <th>Last Name</th>
-      <th>Username</th>
-      <th>Email</th>
-      <th>Age</th>
+      <th>Sale ID</th>
+      <th>Customer Name</th>
+      <th>Total Amount</th>
+      <th>Advanced Payment</th>
+      <th>Sale Date</th>
+      <th>Delivery Date</th>
+      <th>Date of Sale</th>
     </tr>
     </thead>
     <tbody>
