--- a/src/app/pages/tables/widgets/editableTable.html
+++ b/src/app/pages/tables/widgets/editableTable.html
@@ -3,7 +3,7 @@
     <thead>
     <tr class="sortable">
       <th class="table-id" st-sort="id" st-sort-default="true">#</th>
-      <th st-sort="firstName">First Name</th>
+      <th st-sort="firstName">Sale ID</th>
       <th st-sort="lastName">Last Name</th>
       <th st-sort="username">Username</th>
       <th st-sort="email">Email</th>
