--- a/src/app/pages/form/layouts/layouts.html
+++ b/src/app/pages/form/layouts/layouts.html
@@ -1,6 +1,18 @@
 <div class="widgets">
 
- <!-- <div class="row">
+  <div class="row">
+  <div class="col-md-6">
+    <div
+            ba-panel
+            ba-panel-title="Horizontal Form"
+            ba-panel-class="with-scroll">
+      <div ng-include="'app/pages/form/layouts/widgets/createProduct.html'"></div>
+    </div>
+  </div>
+  </div>
+
+
+  <!--<div class="row">
     <div class="col-md-12"
          ba-panel
          ba-panel-title="Inline Form"
@@ -16,7 +28,7 @@
           ba-panel-title="Basic Form"
           ba-panel-class="with-scroll">
         <div ng-include="'app/pages/form/layouts/widgets/basicForm.html'"></div>
-      </div>-->
+      </div>
 
       <div
           ba-panel
@@ -24,8 +36,8 @@
           ba-panel-class="with-scroll">
         <div ng-include="'app/pages/form/layouts/widgets/horizontalForm.html'"></div>
       </div>
-    <!--</div>-->
-    <!--<div class="col-md-6">
+    </div>
+    <div class="col-md-6">
       <div
           ba-panel
           ba-panel-title="Form Without Labels"
@@ -39,6 +51,6 @@
         <div ng-include="'app/pages/form/layouts/widgets/blockForm.html'"></div>
       </div>
     </div>
-  </div>
--->
+  </div>-->
+
 </div>
