--- a/src/app/pages/form/layouts/widgets/createEmployee.html
+++ b/src/app/pages/form/layouts/widgets/createEmployee.html
@@ -20,7 +20,7 @@
     <div class="form-group">
         <label class="col-sm-2 control-label">Employee Joining Date</label>
         <div class="col-sm-10">
-            <input type="text" class="form-control" ng-model="joiningDate" placeholder="Enter Employee Joining Date">
+            <input type="text" class="form-control" ng-model="joiningDate" placeholder="YYYY-MM-DD">
         </div>
     </div>
     <div class="form-group">
