--- a/src/app/pages/tables/widgets/smartTable.html
+++ b/src/app/pages/tables/widgets/smartTable.html
@@ -10,38 +10,40 @@
     <thead>
     <tr class="sortable ">
       <th class="table-id" st-sort="id" st-sort-default="true">#</th>
-      <th st-sort="firstName">Sale ID</th>
-      <th st-sort="lastName">Customer Name</th>
-      <th st-sort="username">Total Amount</th>
-      <th st-sort="email">Advance Payment</th>
-      <th st-sort="age">Sale Date</th>
-      <th st-sort="age">Delivery Date</th>
+      <th st-sort="id">Sale ID</th>
+      <th st-sort="name">Customer Name</th>
+      <th st-sort="price">Total Amount</th>
+      <th st-sort="productCode">Advance Payment</th>
+      <th st-sort="unit">Sale Date</th>
+      <th st-sort="updateOn">Delivery Date</th>
     </tr>
     <tr>
       <th></th>
-      <th><input st-search="firstName" placeholder="Search Sale ID" class="input-sm form-control search-input"
+      <th><input st-search="id" placeholder="Search Sale ID" class="input-sm form-control search-input"
                  type="search"/></th>
-      <th><input st-search="lastName" placeholder="Search Customer Name" class="input-sm form-control search-input"
+      <th><input st-search="name" placeholder="Search Customer Name" class="input-sm form-control search-input"
                  type="search"/></th>
-      <th><input st-search="username" placeholder="Search Total Amount" class="input-sm form-control search-input"
+      <th><input st-search="price" placeholder="Search Total Amount" class="input-sm form-control search-input"
                  type="search"/></th>
-      <th><input st-search="email" placeholder="Search Advance Payment" class="input-sm form-control search-input" type="search"/>
+      <th><input st-search="productCode" placeholder="Search Advance Payment" class="input-sm form-control search-input" type="search"/>
       </th>
-      <th><input st-search="age" placeholder="Search Sale Date" class="input-sm form-control search-input" type="search"/>
+      <th><input st-search="unit" placeholder="Search Sale Date" class="input-sm form-control search-input" type="search"/>
       </th>
-      <th><input st-search="age" placeholder="Search Delivery Date" class="input-sm form-control search-input" type="search"/>
+      <th><input st-search="updatedOn" placeholder="Search Delivery Date" class="input-sm form-control search-input" type="search"/>
       </th>
     </tr>
     </thead>
     <tbody>
-    <tr ng-repeat="item in smartTableData">
+    <<tr ng-repeat="item in smartTableData">
       <td class="table-id">{{item.id}}</td>
-      <td>{{item.firstName}}</td>
-      <td>{{item.lastName}}</td>
-      <td>{{item.username}}</td>
-      <td><a class="email-link" ng-href="mailto:{{item.email}}">{{item.email}}</a></td>
-      <td>{{item.age}}</td>
-      <td>{{item.date}}</td>
+      <!--<td>{{item.id}}</td>-->
+      <td>{{item.name}}</td>
+      <td>{{item.price}}</td>
+      <!--<td><a class="email-link" ng-href="mailto:{{item.email}}">{{item.email}}</a></td>-->
+      <td>{{item.productCode}}</td>
+      <td>{{item.unit}}</td>
+      <td>{{item.updatedOn}}</td>
+
     </tr>
     </tbody>
     <tfoot>
