--- a/src/app/pages/tables/widgets/stripedRows.html
+++ b/src/app/pages/tables/widgets/stripedRows.html
@@ -15,11 +15,14 @@
     <tbody>
     <tr ng-repeat="item in smartTableData">
       <td class="table-id">{{item.id}}</td>
-      <td>{{item.firstName}}</td>
-      <td>{{item.lastName}}</td>
-      <td>{{item.username}}</td>
-      <td><a class="email-link" ng-href="mailto:{{item.email}}">{{item.email}}</a></td>
-      <td>{{item.age}}</td>
+      <td>{{item.id}}</td>
+      <td>{{item.name}}</td>
+      <td>{{item.price}}</td>
+      <!--<td><a class="email-link" ng-href="mailto:{{item.email}}">{{item.email}}</a></td>-->
+      <td>{{item.productCode}}</td>
+      <td>{{item.unit}}</td>
+      <td>{{item.updatedOn}}</td>
+
     </tr>
     </tbody>
   </table>
