data populated in tables from db

--- a/src/app/pages/tables/widgets/smartTable.html
+++ b/src/app/pages/tables/widgets/smartTable.html
@@ -1,16 +1,15 @@
 <div class="horizontal-scroll">
-  <div class="form-group select-page-size-wrap ">
+ <!-- <div class="form-group select-page-size-wrap ">
     <label>Rows on page
       <select class="form-control selectpicker show-tick" title="Rows on page" selectpicker
               ng-model="smartTablePageSize" ng-options="i for i in [5,10,15,20,25]">
       </select>
     </label>
-  </div>
+  </div>-->
   <table class="table" st-table="smartTableData">
     <thead>
     <tr class="sortable ">
-      <th class="table-id" st-sort="id" st-sort-default="true">#</th>
-      <th st-sort="id">Sale ID</th>
+      <th st-sort="id">Product ID</th>
       <th st-sort="name">Customer Name</th>
       <th st-sort="price">Total Amount</th>
       <th st-sort="productCode">Advance Payment</th>
@@ -18,7 +17,7 @@
       <th st-sort="updateOn">Delivery Date</th>
     </tr>
     <tr>
-      <th></th>
+     <!-- <th></th>
       <th><input st-search="id" placeholder="Search Sale ID" class="input-sm form-control search-input"
                  type="search"/></th>
       <th><input st-search="name" placeholder="Search Customer Name" class="input-sm form-control search-input"
@@ -30,12 +29,12 @@
       <th><input st-search="unit" placeholder="Search Sale Date" class="input-sm form-control search-input" type="search"/>
       </th>
       <th><input st-search="updatedOn" placeholder="Search Delivery Date" class="input-sm form-control search-input" type="search"/>
-      </th>
+      </th>-->
     </tr>
     </thead>
     <tbody>
-    <<tr ng-repeat="item in smartTableData">
-      <td class="table-id">{{item.id}}</td>
+    <tr ng-repeat="item in testData">
+      <td>{{item.id}}</td>
       <!--<td>{{item.id}}</td>-->
       <td>{{item.name}}</td>
       <td>{{item.price}}</td>
@@ -51,7 +50,10 @@
       <td colspan="6" class="text-center">
         <div st-pagination="" st-items-by-page="smartTablePageSize" st-displayed-pages="5"></div>
       </td>
+
     </tr>
     </tfoot>
   </table>
+
+
 </div>
