--- a/src/app/pages/dashboard/dashboardPieChart/dashboardPieChart.html
+++ b/src/app/pages/dashboard/dashboardPieChart/dashboardPieChart.html
@@ -1,5 +1,5 @@
 <div class="row pie-charts">
-  <div class="pie-chart-item-container" ng-repeat="chart in charts">
+  <div class="pie-chart-item-container" ng-init="populatePieChartData()" ng-repeat="chart in charts">
     <div ba-panel>
       <div class="pie-chart-item">
         <div class="chart" rel="{{ ::chart.color }}" data-percent="60"> </div>
