--- a/src/app/pages/tables/smart/tables.html
+++ b/src/app/pages/tables/smart/tables.html
@@ -18,7 +18,7 @@
 
   <div class="row">
     <div class="col-md-12">
-      <div ba-panel ba-panel-title="CUSTOMERS DATA " ba-panel-class="with-scroll">
+      <div ba-panel ba-panel-class="with-scroll">
         <div include-with-scope="app/pages/tables/widgets/smartTable.html"></div>
       </div>
     </div>
