--- a/src/app/pages/Invoice/FFInvoice.html
+++ b/src/app/pages/Invoice/FFInvoice.html
@@ -13,11 +13,11 @@
             </thead>
             <tbody>
             <tr ng-repeat="item in invoice.items">
-                <td><input type="text" ng-model="item.name" class="form-control" /></td>
+                <td><input type="text" value="item.name" ng-model="item.name" class="form-control" /></td>
                 <td><input type="text" ng-model="item.description" class="form-control" /></td>
                 <td><input type="number" ng-model="item.qty" class="form-control" /></td>
                 <td><input type="number" ng-model="item.price" class="form-control" /></td>
-                <td>{{item.qty * item.price}} €</td>
+                <td>{{item.qty * item.price}}</td>
                 <td><button type="button" class="btn btn-danger" ng-click="remove($index)">Delete</button></td>
             </tr>
             <tr>
@@ -25,9 +25,46 @@
                 <td></td>
                 <td></td>
                 <td>Total : </td>
-                <td>{{total()}} €</td>
+                <td>{{total()}}</td>
             </tr>
             </tbody>
         </table>
     </section>
+
+    <section class="row" ng-show="false" id="printSectionId">
+        <div style="width: 100%;">
+        <img src="../../../assets/img/header.jpg" width="100%" height="250px" /><br/><br/><br/>
+        <table class="table table-hover" style="border:1px solid black;width: 100%">
+            <thead>
+            <tr>
+                <th style="border:1px solid black;padding: 10px;">Name</th>
+                <th style="border:1px solid black;padding: 10px;">Description</th>
+                <th style="border:1px solid black;padding: 10px;">Qty</th>
+                <th style="border:1px solid black;padding: 10px;">Price</th>
+                <th style="border:1px solid black;padding: 10px;">Total</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr ng-repeat="item in invoice.items" style="border:1px solid black;padding: 10px;">
+                <td style="border:1px solid black;padding: 10px;">{{item.name}}</td>
+                <td style="border:1px solid black;padding: 10px;">{{item.description}}</td>
+                <td style="border:1px solid black;padding: 10px;">{{item.qty}}</td>
+                <td style="border:1px solid black;padding: 10px;">{{item.price}}</td>
+                <td style="border:1px solid black;padding: 10px;">{{item.qty * item.price}}</td>
+            </tr>
+            <tr>
+                <td style="border:1px solid black;padding: 10px;"></td>
+                <td style="border:1px solid black;padding: 10px;"></td>
+                <td style="border:1px solid black;padding: 10px;">Total : </td>
+                <td style="border:1px solid black;padding: 10px;">{{total()}}</td>
+                <td style="border:1px solid black;padding: 10px;"></td>
+            </tr>
+            </tbody>
+        </table>
+            <br/><br/>
+            <img src="../../../assets/img/footer.jpg" width="100%" height="100px" />
+        </div>
+    </section>
+
+    <button ng-click="printToCart('printSectionId')" class="btn btn-primary">Print</button>
 </div>
