--- a/src/app/pages/tables/Customer/ListCustomer.html
+++ b/src/app/pages/tables/Customer/ListCustomer.html
@@ -1,4 +1,4 @@
-<div class="horizontal-scroll" ng-init="loadCustomers()">
+<div class="horizontal-scroll" ng-init="loadCustomers()" ba-panel ba-panel-class="with-scroll">
     <!-- <div class="form-group select-page-size-wrap ">
        <label>Rows on page
          <select class="form-control selectpicker show-tick" title="Rows on page" selectpicker
