--- a/src/app/pages/tables/widgets/smartTable.html
+++ b/src/app/pages/tables/widgets/smartTable.html
@@ -1,11 +1,12 @@
 <div class="horizontal-scroll">
- <!-- <div class="form-group select-page-size-wrap ">
-    <label>Rows on page
-      <select class="form-control selectpicker show-tick" title="Rows on page" selectpicker
-              ng-model="smartTablePageSize" ng-options="i for i in [5,10,15,20,25]">
-      </select>
-    </label>
-  </div>-->
+  <input type="text" ng-model="searchProduct" placeholder="Search here" class="form-control">
+  <!-- <div class="form-group select-page-size-wrap ">
+     <label>Rows on page
+       <select class="form-control selectpicker show-tick" title="Rows on page" selectpicker
+               ng-model="smartTablePageSize" ng-options="i for i in [5,10,15,20,25]">
+       </select>
+     </label>
+   </div>-->
   <table class="table" st-table="smartTableData">
     <thead>
     <tr class="sortable ">
@@ -33,7 +34,7 @@
     </tr>
     </thead>
     <tbody>
-    <tr ng-repeat="item in testData">
+    <tr ng-repeat="item in testData | filter: searchProduct">
       <td>{{item.id}}</td>
       <!--<td>{{item.id}}</td>-->
       <td>{{item.name}}</td>
