show customer detail with invoice Incomplete

--- a/src/app/pages/Invoice/FFInvoice.html
+++ b/src/app/pages/Invoice/FFInvoice.html
@@ -1,4 +1,12 @@
 <div>
+    <div>
+    <md-card-title class="simple-title">
+        <h4 class="md-heading">Customer Detail:</h4>
+    </md-card-title>
+        <div><span><span>{{customerfirstName}}</span></span></div>
+
+
+    </div>
     <section class="row" ng-controller="FFInvoiceController">
         <table class="table table-hover">
             <thead>
