show Customer Detail

--- a/src/app/pages/tables/Customer/ListCustomer.html
+++ b/src/app/pages/tables/Customer/ListCustomer.html
@@ -1,4 +1,4 @@
-<div class="horizontal-scroll" ng-init="loadCustomers()">
+<div class="horizontal-scroll" ng-init="loadCustomers()" ba-panel ba-panel-class="with-scroll">
     <input type="text" ng-model="searchCustomer" placeholder="Search here" class="form-control">
 
     <!-- <div class="form-group select-page-size-wrap ">
