to do list populated.. apiUrl constant added..

--- a/src/app/pages/dashboard/dashboardTodo/dashboardTodo.html
+++ b/src/app/pages/dashboard/dashboardTodo/dashboardTodo.html
@@ -10,7 +10,7 @@
       <i class="mark" style="background-color: {{::item.color}}"></i>
       <label class="todo-checkbox custom-checkbox custom-input-success">
         <input type="checkbox" ng-model="isChecked">
-        <span class="cut-with-dots">{{ item.text }}</span>
+        <span class="cut-with-dots">{{ item.todoMessage }}</span>
       </label>
       <i class="remove-todo ion-ios-close-empty" ng-click="item.deleted = true"></i>
     </li>
