--- a/src/app/pages/tables/widgets/smartTable.html
+++ b/src/app/pages/tables/widgets/smartTable.html
@@ -55,6 +55,23 @@
     </tr>
     </tfoot>
   </table>
+</div>
 
-
+<div class="row-fluid" >
+  <div class="accordion-toggle" data-toggle="collapse" data-target="#collapseThree">
+    <div class="span1">1</div>
+    <div class="span3">Mark</div>
+    <div class="span3">Otto</div>
+    <div class="span3">@mdo</div>
+  </div>
+  <div class="span1">
+    <button type="button" class="btn btn-primary"><i class="icon-search icon-white"></i></button></div>
+</div>
+<div id="collapseThree" class="row-fluid collapse in">
+  <div class="span1"></div>
+  <div class="span9">
+    Details 1
+    Details 2
+    Details 3
+  </div>
 </div>
