--- a/src/app/pages/tables/widgets/smartTable.html
+++ b/src/app/pages/tables/widgets/smartTable.html
@@ -51,19 +51,18 @@
       <td colspan="6" class="text-center">
         <div st-pagination="" st-items-by-page="smartTablePageSize" st-displayed-pages="5"></div>
       </td>
-
     </tr>
     </tfoot>
   </table>
 </div>
 
 <div class="row-fluid" >
-  <div class="accordion-toggle" data-toggle="collapse" data-target="#collapseThree">
+  <!--<div class="accordion-toggle" data-toggle="collapse" data-target="#collapseThree">
     <div class="span1">1</div>
     <div class="span3">Mark</div>
     <div class="span3">Otto</div>
     <div class="span3">@mdo</div>
-  </div>
+  </div>-->
   <div class="span1">
     <button type="button" class="btn btn-primary"><i class="icon-search icon-white"></i></button></div>
 </div>
