Print Page Changed!

--- a/src/app/pages/Invoice/FFInvoice.html
+++ b/src/app/pages/Invoice/FFInvoice.html
@@ -92,19 +92,19 @@
 
             <br/><br/><br/>
             <div class="col-md-12">
-                <div class="col-md-2">Deliver Date</div>
+                <div class="col-md-2">Deliver Date:</div>
                 <div class="col-md-4"><input type="text" class="form-control"/></div>
             </div>
 
 
             <br/><br/><br/>
             <div class="col-md-12">
-                <div class="col-md-2">Cash Payment</div>
+                <div class="col-md-2">Cash Payment:</div>
                 <div class="col-md-4"><label><input type="checkbox" checked></label></div>
             </div>
 
             <br/><br/><br/>
-        <button type="button" ng-click="printInvoice('printSection1')" class="btn btn-primary">Print</button>
+        <button type="button" ng-click="printInvoice('printSection1')" class="btn btn-primary">Print</button>&nbsp;&nbsp;&nbsp;
         <button type="button" ng-click="saveSaleData()" class="btn btn-primary">Add Sale</button>
     </section>
 
